# Ferrum

./: .gitignore  Cargo.toml  LICENSE
ferrum_core/: Cargo.toml
ferrum_core/src/: lib.rs
ferrum_desktop/: Cargo.toml  tauri.conf.json
ferrum_desktop/src/: main.rs
ferrum_shell/: Cargo.toml
ferrum_shell/src/: main.rs
ferrum_shell/src/ui/: gui.rs  mod.rs
