[package]
name = "ferrum_core"
version = "0.1.0"
edition = "2021"
description = "Plattformunabhängige Logik für Ad-Blocking, Downloads und Datenbankverwaltung."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
log = "0.4"
anyhow = "1.0"

url = "2.5"
reqwest = { version = "0.12", features = ["json", "blocking", "gzip", "rustls-tls"], optional = true }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"], optional = true }

rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[features]
default = []
db = ["rusqlite"]
net = ["reqwest", "tokio"]