[package]
name = "ferrum_desktop"

[[bin]]
name = "ferrum"
path = "src/main.rs"

[dependencies]
ferrum_core = { path = "../ferrum_core" }

tauri = { version = "2.9.3", features = ["shell"] }
tauri-build = { version = "2.5.2", features = [] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"