[package]
name = "ferrum_desktop"
version = "0.1.0"

[[bin]]
name = "ferrum"
path = "src/main.rs"

[dependencies]
ferrum_core.workspace = true

tauri = { version = "2.9.3", features = [] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }
