[package]
name = "ferrum_shell"
version = "0.1.0"
edition = "2021"
description = "Die ausführbare Desktop-Anwendung (Iced) für den Ferrum Browser."

[dependencies]
iced.workspace = true
iced.features = [
    "tokio",
    "image",
    "qr_code",
    "wgpu"
]

tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2.5"

log = "0.4.28"
env_logger = "0.11"